--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,7 +1,7 @@
 <nav>
     <div class="navigation">
         <div class="logo col">
-            <a href="/">Logo</a>
+            <a href="/">Home</a>
         </div> 
         <% if(!session) {%>
         <div class="search" >
