--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/jquery.js"></script>
+    <script src="/js/jquery.js"></script>
     <link rel="stylesheet" href="/style.css">
     <title>Landing Page</title>
 </head>
@@ -46,7 +46,7 @@
                 </div>
                 <p>
                     
-                            <a href="/rental/<%= post.id%>"   id="view" >View</a>
+                            <a href="/rental/<%= post.address%>/<%= post.lat%>/<%= post.long%>/<%= post.id%>"   id="view" >View</a>
                           
    
             </div>
