--- a/views/post.ejs
+++ b/views/post.ejs
@@ -6,31 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/jquery.js"></script>
+    <script src="/js/jquery.js"></script>
     <link rel="stylesheet" href="/style.css">
     <title>Name of Profile</title>
-    <style>
-        .search {
-            display: none;
-        }
-        .upload{
-            display: flex;
-            justify-content: center;
-            line-height: 1.5;
-            
-          
-        }
-        .upimage img{
-            display: flex;
-            justify-content: center;
-            width:100%;
-           height: 200px;
-           object-fit: contain;
-        }
-        form{
-            width: 40%;
-        }
-    </style>
 </head>
 
 <body>
@@ -38,28 +16,25 @@
         <h1>This is Post</h1>
      
         <div class="upload">
-            <form action="">
+            <form action="/rental" method="post">
                 <div class="upimage">
                     <p><img id="output" src="https://th.bing.com/th/id/R.66754ec538a650d7f0058a92dfa87c2c?rik=zxjjfdK4GJNkbg&riu=http%3a%2f%2fcdn.onlinewebfonts.com%2fsvg%2fimg_234957.png&ehk=Fi1SrQ6CCna9G4YthIa%2fPeLqp2EuDeiIUU7VEihDa1E%3d&risl=&pid=ImgRaw&r=0"/></p>
                 </div>
                 <br>
                 <label for="image">Upload Image:</label><br>
-                <input type="file" id="image" name="image"  accept="image/*" onchange="loadFile(event)"> <br>
+                <input type="file" id="image" name="image"  accept="image/*" onchange="loadFile(event)" required> <br>
                 <label for="price">Price:</label><br>
-                <input type="number" id="price" name="price" ><br>
-
+                <input type="number" id="price" name="price" required min="0"><br>
                 <label for="description">Description:</label><br>
-                <input type="textarea" id="description" name="description" value=""><br>
-
+                <input type="textarea" id="description" name="description" required max="150"><br>
                 <label for="address">Address:</label><br>
-                <input id="address" name="address"type="text" placeholder="Enter address here" /><br>
-
+                <input id="address" name="address"type="text" placeholder="Enter address here" required/><br>
                 <label for="latitude">Latitude:</label><br>
-                    <input type="text" id="latitude" name="latitude" readonly /><br>
+                    <input type="text" id="latitude" name="lat" readonly /><br>
 
                 <label for="longitude">Longitude:</label><br>
                
-                    <input type="text" name="longitude"id="longitude" readonly /><br>
+                    <input type="text" name="long"id="longitude" readonly /><br>
                 <button>Submit</button>
               </form> 
               
@@ -71,28 +46,8 @@
 
     
 </body>
-<script>
-    var loadFile = function(event) {
-        var image = document.getElementById('output');
-        image.src=URL.createObjectURL(event.target.files[0]);
-    };
-</script>
-<script
-    src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&libraries=places"></script>
 
-<script>
-    google.maps.event.addDomListener(window, 'load', initialize);
-    function initialize() {
-        var input = document.getElementById('address');
-        var autocomplete = new google.maps.places.Autocomplete(input);
-        autocomplete.addListener('place_changed', function () {
-            var place = autocomplete.getPlace();
-            // place variable will have all the information you are looking for.
-
-            document.getElementById("latitude").value = place.geometry['location'].lat();
-            document.getElementById("longitude").value = place.geometry['location'].lng();
-        });
-    }
-</script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&libraries=places"></script>
+<script src="/js/post.js"></script>
 
 </html>
