--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,55 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/jquery.js"></script>
+    <script src="/js/jquery.js"></script>
     <link rel="stylesheet" href="/style.css">
     <title>Name of Profile</title>
     <style>
-        .search {
-            display: none;
-        }
-
-        .user {
-            display: flex;
-            justify-content: space-around;
-            margin: 0 3%;
-            position: relative;
-        }
-        .userinfoupdate{
-            margin-top: 3rem;
-        }
-        .updateinfo {
-            line-height: 2.5;
-        }
-        
-        .updateinfo input {
-            font-size: 1.25rem;
-            margin: 0.75rem 0;
-        }
-
-        .userpost {
-            width: 60%;
-            overflow-y: scroll;
-            height: 550px;
-            direction: rtl;
-            position: relative;
-        }
-
-        .userlist {
-            direction: ltr;
-            padding: 1rem;
-            border: 1px solid black;
-            width: 80%;
-            position: absolute;
-            right: 5%;
-            position: relative;
-        }
-
-        .forms {
-            display: flex;
-            justify-content: space-evenly;
-
-        }
+     
     </style>
 </head>
 
