--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,7 @@ nav {
     background-color: #343a40;
 }
 
-.navigation button,.navigation .signform a, .user button, .upload button{
+.navigation button,.navigation .signform a, .user button, .upload button, .forms a{
     font-size: 1rem;
     color: #829099;
     background-color: white;
@@ -68,7 +68,7 @@ nav {
   width: 100%;
 }
 
-.navigation button:hover ,.navigation .signform a:hover, .user button:hover, .upload button:hover{
+.navigation button:hover ,.navigation .signform a:hover, .user button:hover, .upload button:hover, .form a{
     background-color: #555555;
     color: white;
 }
@@ -138,7 +138,7 @@ nav {
 
 
   .posting{
-    margin: 3rem 3%;
+    margin: 1rem 3%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -165,7 +165,7 @@ nav {
   }
 .img{
     width: 100%;
-    height: 12rem;
+    height: 9rem;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -225,14 +225,21 @@ nav {
     margin-bottom: 1rem;
     /* overflow-y: scroll; */
   }
-  .description h2, .description h6{
+  .description h2{
 font-weight: 700;
+
   }
+  .description h6{
+    font-weight: 700;
+    color: rgb(214, 118, 62);
+      }
   .row{
     display: flex;
     justify-content: space-between;
   }
-
+  .reviews{
+    color: rgb(255, 0, 0);
+  }
 
   /* start post ejs css */
   .search {
