--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,32 +11,42 @@
     <title>Landing Page</title>
 </head>
 <style>
-
+.card img{
+    width: 100%;
+    height: 9rem;
+   }
 </style>
 
 <body class="bg-img">
-   
-    
-<%- include('navbar') %> 
+    <%- include('navbar') %> 
+    <br>
+    <% if(session){ %>
+        <center>
+            <h1 style="color: white;margin: 1.5rem 0;">Welcome <span style="color:rgb(238, 255, 0); font-weight: 1000;"> <%= result.fullname %> </span></h1>
+        </center>
+          
+<% } %> 
+
     <!-- maincontent -->
     <div class="posting">
-
+      
         <% for(let post of file){ %>
 
             <div class="card">
-                <div class="img"
-                    style="background-image: url('<%=post.imgUrl%>');">
-
+                <div class="img">
+ <img src="<%=post.rentalImage%>" alt="">
                 </div>
+                <br>
                 <div class="description">
+                    
                     <h2> ₱ <%= post.price %> </h2>
                     <h6 class="title"><%= post.fullname %> </h6>
                     <div class="address">
-                        <p><%= post.address.slice(0, 50) %> ...</p>
+                        <p><%= post.address.slice(0, 60) %> ...</p>
                     </div>
                     <div class="short">
                         <strong>Description:</strong>
-                        <p> <%= post.description.slice(0, 70) %> ... </p>
+                        <p> <%= post.description.slice(0, 80) %> ... </p>
                     </div>
                     <div class="row">
                         <p class="dateposted"><%= post.date.toLocaleDateString()%>  </p>
