--- a/views/rental.ejs
+++ b/views/rental.ejs
@@ -11,7 +11,21 @@
     <title><%= postresult.fullname %> </title>
 </head>
 <style>
-   
+   .back{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   }
+   .back span{
+    color: red
+   }
+   .back h3{
+    color: rgb(245, 241, 6);
+   }
+   img{
+    width: 100%;
+    height: 9rem;
+   }
 </style>
 
 <body  class="bg-img">
@@ -19,19 +33,20 @@
         <div class="back">
             <h2>
                 <a href="/" id="view">Back</a>
-            </h2>
+            </h>
+            <h3> <span>Note: </span> Drag the Pegmen(located on the Bottom rigth part of the Map) onto the Map to Open the Street View </h3>
         </div>
 
         <div class="rental">
             <div class="apartment-info">
 
-                <div class="img"
-                    style="background-image: url('https://images.pexels.com/photos/323705/pexels-photo-323705.jpeg?cs=srgb&dl=pexels-expect-best-323705.jpg&fm=jpg');">
-
+                <div class="img">
+                <img src="/<%= postresult.rentalImage %>" alt="">
                 </div>
                 <div class="description ">
                     <div class="line">
-                        <h1> <%= postresult.price %> </h1>
+                       
+                        <h1> <%= postresult.price%> </h1>
                         <h2 class="tit"><%= postresult.fullname %> </h2>
                         <div class="add">
                             <p id="address"> <%=postresult.address%> </p>
@@ -98,8 +113,11 @@
 
 
             </div>
+ 
+            <div id="map">
+               
 
-            <div id="map"></div>
+            </div>
             <script
                 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
                 defer></script>
